alt image remove

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 
-    <img src="chemin/vers/logo.png" alt="Logo de mon site">
+    <img src="chemin/vers/logo.png" alt="">
 </header>
 <div class="container">
     <div class="row justify-content-center">
