--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,39 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet"  href="bootstrap.min.css">
-    <link rel="stylesheet"  href="index.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="custom.css">
+    <style>
+        .custom-logo {
+            border: none; /* Supprime la bordure */
+            outline: none; /* Supprime le contour */
+        }
+    </style>
 </head>
 <body>
-<header>
 
-    <img src="chemin/vers/logo.png" alt="">
-</header>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <img src="image/nature.jpg" alt="" class="img-fluid">
-            <h1 class="mt-5">Registration</h1>
-            <form action="/registration" method="post">
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email:</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password:</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
-                </div>
-                <div class="mb-3">
-                    <label for="firstName" class="form-label">First Name:</label>
-                    <input type="text" class="form-control" id="firstName" name="firstName" required>
-                </div>
-                <div class="mb-3">
-                    <label for="lastName" class="form-label">Last Name:</label>
-                    <input type="text" class="form-control" id="lastName" name="lastName" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Registration</button>
-            </form>
+<div class="background-container">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="form-container p-4">
+                    <img src="image/logo.png" alt="" class="logo custom-logo">
+                    <h1 class="mt-3 text-center">Formulaire d'inscription</h1>
+                    <form action="/registration" method="post">
+                        <div class="mb-3">
+                            <label for="firstName" class="form-label">Nom:</label>
+                            <input type="text" class="form-control" id="firstName" name="firstName" th:field="${signUpForm.firstName}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="lastName" class="form-label">Prénom :</label>
+                            <input type="text" class="form-control" id="lastName" name="lastName" th:field="${signUpForm.lastName}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email :</label>
+                            <input type="email" class="form-control" id="email" name="email" th:field="${signUpForm.email}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Mot de passe :</label>
+                            <input type="password" class="form-control" id="password" name="password" th:field="${signUpForm.password}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="confirmPassword" class="form-label">Confirm Password:</label>
+                            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" th:field="*{signUpForm.confirmPassword}" required>
+                        </div>
 
+
+                        <div class="text-center mt-4">
+                            <button type="submit" class="btn btn-primary btn-lg">S'enregistrer</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
