peuplement de bd

--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
-    <link rel="stylesheet" th:href="@{/static/bootstrap.min.css}" href="/static/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="signin.css">
 </head>
 <body>
 <h1>Registration</h1>
