--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -23,26 +23,26 @@
                 <div class="form-container p-4">
                     <img src="image/logo.png" alt="" class="logo custom-logo">
                     <h1 class="mt-3 text-center">Formulaire d'inscription</h1>
-                    <form action="/registration" method="post">
+                    <form th:action="@{/signup}" th:object="${signUpForm}" method="POST">
                         <div class="mb-3">
                             <label for="firstName" class="form-label">Nom:</label>
-                            <input type="text" class="form-control" id="firstName" name="firstName" th:field="${signUpForm.firstName}" required>
+                            <input type="text" class="form-control" id="firstName" name="firstName" th:field="*{firstName}" required>
                         </div>
                         <div class="mb-3">
                             <label for="lastName" class="form-label">Prénom :</label>
-                            <input type="text" class="form-control" id="lastName" name="lastName" th:field="${signUpForm.lastName}" required>
+                            <input type="text" class="form-control" id="lastName" name="lastName" th:field="*{lastName}" required>
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email :</label>
-                            <input type="email" class="form-control" id="email" name="email" th:field="${signUpForm.email}" required>
+                            <input type="email" class="form-control" id="email" name="email" th:field="*{email}" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Mot de passe :</label>
-                            <input type="password" class="form-control" id="password" name="password" th:field="${signUpForm.password}" required>
+                            <input type="password" class="form-control" id="password" name="password" th:field="*{password}" required>
                         </div>
                         <div class="mb-3">
                             <label for="confirmPassword" class="form-label">Confirm Password:</label>
-                            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" th:field="*{signUpForm.confirmPassword}" required>
+                            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" th:field="*{confirmPassword}" required>
                         </div>
 
 
