--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -3,27 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration</title>
+    <title>Sign In</title>
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="signin.css">
+    <link rel="stylesheet" href="index.css"> <!-- Ajoutez le lien vers votre fichier CSS personnalisé -->
 </head>
 <body>
-<h1>Registration</h1>
-<form action="/register" method="post">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br>
+<div class="container1">
+    <h1 class="form-title">Connexion</h1>
+    <form th:action="@{/signin}" method="POST" class="login-form">
+        <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="Enter email">
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required><br>
+        <label for="password" class="form-label1">Mot de passe:</label>
+        <input type="password" id="password" name="password" class="form-control1" required>
 
-    <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" name="firstName" required><br>
+        <button type="submit" class="btn btn-primary1">Connexion</button>
+    </form>
 
-    <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" name="lastName" required><br>
-
-    <input type="submit" value="Register">
-
-</form>
+    <p class="form-link1">Pas encore de compte ? <a href="/signup">Inscrivez-vous ici</a></p>
+    <p class="form-link1"><a href="/forgot-password">Mot de passe oublié ?</a></p>
+</div>
 </body>
 </html>
