--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,13 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="custom.css">
-    <style>
-        .custom-logo {
-            border: none; /* Supprime la bordure */
-            outline: none; /* Supprime le contour */
-        }
-    </style>
+
 </head>
 <body>
 
@@ -21,8 +15,12 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="form-container p-4">
-                    <img src="image/logo.png" alt="" class="logo custom-logo">
+
                     <h1 class="mt-3 text-center">Formulaire d'inscription</h1>
+                    <div class="text-center">
+                        <img th:src="@{/images/logo.png}" alt="Logo" class="logo">
+                    </div>
+
                     <form th:action="@{/signup}" th:object="${signUpForm}" method="POST">
                         <div class="mb-3">
                             <label for="firstName" class="form-label">Nom:</label>
