--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,8 @@
         <ul>
             <li><a href="/login">Se connecter</a></li>
             <li><a href="/signup">S'inscrire</a></li>
+            <li><a th:href="@{/profile}">mon profil</a></li>
+
         </ul>
     </nav>
 </header>
@@ -37,7 +39,7 @@
         </div>
     </section>
 </main>
-<footer class="footer">
+<footer class="footer3">
     <p>&copy; 2023 Flash Cash. Tous droits réservés.</p>
 </footer>
 </body>
