implement IBAN database

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="index.css"> <!-- Ajoutez le lien vers votre fichier CSS personnalisé -->
 </head>
-<body>
+<body classe="z">
 <header class="header">
     <h1 class="logo2">Flash Cash</h1>
     <nav class="nav">
