features : added transfer-to-flashcash and transfer to bank

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -45,12 +45,12 @@
         <div class="col-md-4">
             <h3>Add cash to Flash Cash</h3>
             <p>Top up your account balance by adding cash to your Flash Cash wallet.</p>
-            <button class="btn btn-primary">Add Cash</button>
+            <a th:href="@{/transfer-to-flashcash}" class="btn btn-primary">Add cash</a>
         </div>
         <div class="col-md-4">
             <h3>Transfer to Your Bank</h3>
             <p>Transfer money from your Flash Cash wallet to your linked bank account.</p>
-            <button class="btn btn-primary">Transfer to Bank</button>
+            <a th:href="@{/transfer-to-bank}" class="btn btn-primary">Transfer to Bank</a>
         </div>
         <div class="col-md-4">
             <h3>Add IBAN</h3>
