--- a/src/main/resources/templates/transfer-to-flashcash.html
+++ b/src/main/resources/templates/transfer-to-flashcash.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Bank Payment</title>
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="index.css">
+
 
 </head>
 <body>
@@ -20,6 +22,7 @@
             <label for="expirationDate" class="minimalist-label">Expiration Date:</label>
             <input type="text" id="expirationDate" name="expirationDate" class="form-control minimalist-input" required>
         </div>
+
 
         <!-- Autres champs du formulaire de paiement -->
 
