features : added transfer-to-flashcash and transfer to bank

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Transfert</a>
+                    <a class="nav-link" href="#">Transfer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Profile</a>
@@ -56,6 +56,12 @@
             <h3>Add IBAN</h3>
             <p>Link your bank account by adding your IBAN to enable easy transfers.</p>
             <a th:href="@{/add-iban}" class="btn btn-primary">Add IBAN</a>
+        </div>
+
+        <div class="col-md-4 offset-md-4 text-center">
+            <h3>Friend-to-Friend Money Transfer</h3>
+            <p>Link your bank account by adding your IBAN to enable easy transfers.</p>
+            <a th:href="@{/transfer-to-contact}" class="btn btn-primary">Friend-to-Friend Money Transfer</a>
         </div>
 
     </div>
