--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,8 @@
     <h1 class="logo2">Flash Cash</h1>
     <nav class="nav">
         <ul>
-            <li><a href="/login">Se connecter</a></li>
-            <li><a href="/signup">S'inscrire</a></li>
+            <li><a href="@/login">Se connecter</a></li>
+            <li><a href="@/signup">S'inscrire</a></li>
             <li><a th:href="@{/profile}">mon profil</a></li>
 
         </ul>
