--- a/src/main/resources/templates/transfer-to-flashcash.html
+++ b/src/main/resources/templates/transfer-to-flashcash.html
@@ -10,25 +10,249 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h1 class="text-center">Bank Payment</h1>
+    <h1 class="text-center">Transfer cash</h1>
 
-    <form th:action="@{/transfer-to-flashcash}" method="post" class="minimalist-form">
-        <div class="form-group">
-            <label for="cardNumber" class="minimalist-label">Card Number:</label>
-            <input type="text" id="cardNumber" name="cardNumber" class="form-control minimalist-input" required>
-        </div>
+<!--    <form th:action="@{/transfer-to-flashcash}" th:object="${transferForm}" method="post" class="minimalist-form">-->
+<!--        <div class="form-group">-->
+<!--            <label for="cardNumber" class="minimalist-label">Card Number:</label>-->
+<!--            <input type="text" id="cardNumber" name="cardNumber" class="form-control minimalist-input" required>-->
+<!--        </div>-->
 
-        <div class="form-group">
-            <label for="expirationDate" class="minimalist-label">Expiration Date:</label>
-            <input type="text" id="expirationDate" name="expirationDate" class="form-control minimalist-input" required>
-        </div>
+<!--        <div class="form-group">-->
+<!--            <label for="expirationDate" class="minimalist-label">Expiration Date:</label>-->
+<!--            <input type="text" id="expirationDate" name="expirationDate" class="form-control minimalist-input" required>-->
+<!--        </div>-->
+<!--&lt;!&ndash;        <select th:field="*{contactEmail}">&ndash;&gt;-->
+<!--&lt;!&ndash;            <option value="default">chose a contact</option>&ndash;&gt;-->
+<!--&lt;!&ndash;            <option th:each="email : ${linksEmail}"th:value="${email}"th:utext="${email}"/>&ndash;&gt;-->
+<!--&lt;!&ndash;        </select>&ndash;&gt;-->
+<!--&lt;!&ndash;        <div class="pricing p-3 rounded mt-4 d-flex justify-content-between">&ndash;&gt;-->
+<!--&lt;!&ndash;            <input type="text" th:field="*{amount}"&ndash;&gt;-->
+<!--&lt;!&ndash;                   class="form-control floatingInput"&ndash;&gt;-->
+<!--&lt;!&ndash;                   id="floatingInputAmount" placeholder="amount"/>&ndash;&gt;-->
+<!--&lt;!&ndash;            <label for="floatingInputAmount"></label>&ndash;&gt;-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
 
 
-        <!-- Autres champs du formulaire de paiement -->
+<!--        &lt;!&ndash; Autres champs du formulaire de paiement &ndash;&gt;-->
 
-        <button type="submit" class="btn btn-primary minimalist-button">Pay Now</button>
-    </form>
+<!--        <button type="submit" class="btn btn-primary minimalist-button">Pay Now</button>-->
+<!--    </form>-->
 </div>
+<div class="container d-flex justify-content-center mt-5 mb-5">
+
+
+
+    <div class="row g-3">
+
+        <div class="col-md-6">
+
+            <span>Payment Method</span>
+            <div class="card">
+
+                <div class="accordion" id="accordionExample">
+
+                    <div class="card">
+                        <div class="card-header p-0" id="headingTwo">
+                            <h2 class="mb-0">
+
+                                <button class="btn btn-light btn-block text-left collapsed p-3 rounded-0 border-bottom-custom" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <div class="d-flex align-items-center justify-content-between">
+
+                                        <span>Paypal</span>
+                                        <img src="https://i.imgur.com/7kQEsHU.png" width="30">
+
+                                    </div>
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                            <div class="card-body">
+                                <input type="text" class="form-control" placeholder="Paypal email">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header p-0">
+                            <h2 class="mb-0">
+                                <button class="btn btn-light btn-block text-left p-3 rounded-0" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <div class="d-flex align-items-center justify-content-between">
+
+                                        <span>Credit card</span>
+                                        <div class="icons">
+                                            <img src="https://i.imgur.com/2ISgYja.png" width="30">
+                                            <img src="https://i.imgur.com/W1vtnOV.png" width="30">
+                                            <img src="https://i.imgur.com/35tC99g.png" width="30">
+                                            <img src="https://i.imgur.com/2ISgYja.png" width="30">
+                                        </div>
+
+                                    </div>
+                                </button>
+                            </h2>
+                        </div>
+
+                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div class="card-body payment-card-body">
+
+                                <span class="font-weight-normal card-text">Card Number</span>
+                                <div class="input">
+
+                                    <i class="fa fa-credit-card"></i>
+                                    <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+
+                                </div>
+
+                                <div class="row mt-3 mb-3">
+
+                                    <div class="col-md-6">
+
+                                        <span class="font-weight-normal card-text">Expiry Date</span>
+                                        <div class="input">
+
+                                            <i class="fa fa-calendar"></i>
+                                            <input type="text" class="form-control" placeholder="MM/YY">
+
+                                        </div>
+
+                                    </div>
+
+
+                                    <div class="col-md-6">
+
+                                        <span class="font-weight-normal card-text">CVC/CVV</span>
+                                        <div class="input">
+
+                                            <i class="fa fa-lock"></i>
+                                            <input type="text" class="form-control" placeholder="000">
+
+                                        </div>
+
+                                    </div>
+
+
+                                </div>
+
+                                <span class="text-muted certificate-text"><i class="fa fa-lock"></i> Your transaction is secured with ssl certificate</span>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="col-md-6">
+            <span>Summary</span>
+
+            <div class="card">
+
+                <div class="d-flex justify-content-between p-3">
+
+                    <div class="d-flex flex-column">
+
+                        <span>Pro(Billed Monthly) <i class="fa fa-caret-down"></i></span>
+                        <a href="#" class="billing">Save 20% with annual billing</a>
+
+                    </div>
+
+                    <div class="mt-1">
+                        <sup class="super-price">$9.99</sup>
+                        <span class="super-month">/Month</span>
+                    </div>
+
+                </div>
+
+                <hr class="mt-0 line">
+
+                <div class="p-3">
+
+                    <div class="d-flex justify-content-between mb-2">
+
+                        <span>Refferal Bonouses</span>
+                        <span>-$2.00</span>
+
+                    </div>
+
+                    <div class="d-flex justify-content-between">
+
+                        <span>Vat <i class="fa fa-clock-o"></i></span>
+                        <span>-20%</span>
+
+                    </div>
+
+
+                </div>
+
+                <hr class="mt-0 line">
+
+
+                <div class="p-3 d-flex justify-content-between">
+
+                    <div class="d-flex flex-column">
+
+                        <span>Today you pay(US Dollars)</span>
+                        <small>After 30 days $9.59</small>
+
+                    </div>
+                    <span>$0</span>
+
+
+
+                </div>
+
+
+                <div class="p-3">
+
+                    <button class="btn btn-primary btn-block free-button">Try it free for 30 days</button>
+                    <div class="text-center">
+                        <a href="#">Have a promo code?</a>
+
+                    </div>
+
+                    <form th:action="@{/transfer-to-flashcash}" th:object="${transferToFlashCashForm}" method="post" class="minimalist-form">
+                        <div class="form-group">
+                            <label for="cardNumber" class="minimalist-label">Amount:</label>
+                            <input type="text" id="cardNumber" name="cardNumber" class="form-control minimalist-input" required>
+                        </div>
+
+<!--                        <div class="form-group">-->
+<!--                            <label for="expirationDate" class="minimalist-label">Expiration Date:</label>-->
+<!--                            <input type="text" id="expirationDate" name="expirationDate" class="form-control minimalist-input" required>-->
+<!--                        </div>-->
+                        <!--        <select th:field="*{contactEmail}">-->
+                        <!--            <option value="default">chose a contact</option>-->
+                        <!--            <option th:each="email : ${linksEmail}"th:value="${email}"th:utext="${email}"/>-->
+                        <!--        </select>-->
+                        <!--        <div class="pricing p-3 rounded mt-4 d-flex justify-content-between">-->
+                        <!--            <input type="text" th:field="*{amount}"-->
+                        <!--                   class="form-control floatingInput"-->
+                        <!--                   id="floatingInputAmount" placeholder="amount"/>-->
+                        <!--            <label for="floatingInputAmount"></label>-->
+                        <!--        </div>-->
+
+
+                        <!-- Autres champs du formulaire de paiement -->
+
+                        <button type="submit" class="btn btn-primary minimalist-button">Pay Now</button>
+                    </form>
+
+                </div>
+
+
+
+
+            </div>
+        </div>
+
+    </div>
+
+
+</div>
+
 
 
 </body>
