--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Transfer</a>
+                    <a th:href="@{/add-friend}" class="nav-link" >Transfer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Profile</a>
